--- a/client/src/components/fishtank.css
+++ b/client/src/components/fishtank.css
@@ -1,9 +1,8 @@
-/* components/FishTank.css */
 .fish-tank {
     position: relative;
     width: 80vw;
     height: 40vh;
-    border: 2px solid #006400; /* Tank border color */
+    border: 4px solid #000000; /* Tank border color */
     background-color: #87cefa; /* Tank water color */
     margin: 20px auto;
     overflow: hidden;
@@ -11,10 +10,15 @@
   
   .fish {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    background-color: gold;
-    border-radius: 50%;
     transition: left 0.1s, top 0.1s;
+    background-image: url('../../public/fish.png');
+    background-size: cover;
+    background-position: center;  
+  }
+  
+  .food {
+    position: absolute;
+    background-color: orange;
+    border-radius: 50%;
   }
   
